# rust-playground

./: .gitignore  README.md
cli/generation-clap/: Cargo.toml
cli/generation-clap/src/: cli.rs  generation.rs  main.rs
cli/random/: Cargo.toml
cli/random/src/: cli.rs  main.rs
general/collections/: Cargo.toml
general/collections/src/: hash.rs  main.rs  tree.rs  vector.rs
graphics/basic-ggez/: Cargo.toml
graphics/basic-ggez/src/: data.rs  logic.rs  main.rs  state.rs
graphics/basic-macroquad/: Cargo.toml
graphics/basic-macroquad/src/: index.html
graphics/basic-nannou/: Cargo.toml
graphics/basic-nannou/src/: main.rs  state.rs
graphics/basic-raylib/: Cargo.toml
graphics/basic-raylib/src/: logic.rs  main.rs  state.rs
graphics/ggez-platform/: Cargo.toml
graphics/ggez-platform/src/: logic.rs  main.rs
graphics/macroquad-platform/: Cargo.toml
graphics/macroquad-platform/src/: index.html  logic.rs  main.rs  state.rs
graphics/minifb-example/: Cargo.toml
graphics/minifb-example/src/: color.rs  graphic.rs  logic.rs  main.rs  render.rs  state.rs
graphics/minifb-platform/: Cargo.toml
graphics/minifb-platform/src/: color.rs  graphic.rs  image.rs  logic.rs  main.rs  rectangle.rs  render.rs  state.rs
graphics/nannou-platform/: Cargo.toml
graphics/nannou-platform/src/: logic.rs
graphics/nano-game-ggez/: Cargo.toml
graphics/nano-game-ggez/src/: logic.rs  main.rs  state.rs
graphics/platform-game-ggez/: Cargo.toml
graphics/platform-game-ggez/src/: main.rs  models.rs  utils.rs
graphics/raylib-platform/: Cargo.toml
graphics/raylib-platform/src/: state.rs
graphics/wasm-platform/: Cargo.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
graphics/wasm-platform/src/: lib.rs  logic.rs  state.rs  wasm.rs
graphics/winit-pixels/: Cargo.toml  README.md
graphics/winit-pixels/src/: color.rs  main.rs  rectangle.rs  render.rs  state.rs  window.rs
graphics/winit-softbuffer/: Cargo.toml
graphics/winit-softbuffer/src/: image.rs  main.rs  render.rs  state.rs  window.rs
web/api-axum/: Cargo.toml
web/api-axum/src/: controllers.rs  main.rs  models.rs
web/api-hyper-sqlx/: Cargo.toml
web/api-hyper-sqlx/src/: controllers.rs  main.rs  models.rs  postgresql.txt  utils.rs
web/api-tide/: Cargo.toml
web/api-tide/src/: controllers.rs  main.rs  models.rs  utils.rs
web/api-warp/: Cargo.toml
web/api-warp/src/: controllers.rs  main.rs  models.rs
web/json-api-hyper-sqlx/: .env  Cargo.toml
web/json-api-hyper-sqlx/src/: controllers.rs  main.rs  models.rs  utils.rs
web/json-api-tide/: Cargo.toml
web/json-api-tide/src/: controllers.rs  main.rs  models.rs
web/json-api-tide/src/controllers/: crud.rs  utils.rs
web/json-api-tide/src/models/: item.rs  list.rs  state.rs
web/json-api-warp/: Cargo.toml
web/json-api-warp/src/: controllers.rs  main.rs  models.rs
