[package]
name = "wasm-platform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
gloo = "0.11.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'Window',
  'Document',
  'Element',
  'KeyboardEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]
