[package]
name = "wasm-platform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
gloo = "0.11.0"
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[dependencies.web-sys]
version = "0.3.76"
features = [
  'console',
  'Window',
  'Document',
  'Element',
  'KeyboardEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]
