[package]
edition = "2021"
name = "api-hyper-sqlx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.11", features = ["serde"]}
dotenv = "0.15"
futures = "0.3"
hyper = "0.14"
routerify = "3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"]}
tokio = {version = "1.24", features = ["full"]}
