[package]
edition = "2021"
name = "api-hyper-sqlx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
hyper = "0.14.32"
routerify = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "chrono",
] }
tokio = { version = "1.42.0", features = ["full"] }
