[package]
edition = "2021"
name = "api-tide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
cfg-if = "1.0.0"
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tide = "0.16.0"
