[package]
authors = ["leon"]
edition = "2018"
name = "json-api-hyper-sqlx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
hyper = "0.13"
routerify = "1.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"]}
tokio = {version = "0.2", features = ["full"]}
