[package]
authors = ["leon"]
edition = "2018"
name = "json-api-tide"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6", features = ["attributes"]}
cfg-if = "1.0"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tide = "0.13"
