[package]
authors = ["leon"]
edition = "2018"
name = "json-api-warp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"
